--- a/servicios/templates/tiposServicios/tipoServicio_modal.html
+++ b/servicios/templates/tiposServicios/tipoServicio_modal.html
@@ -18,18 +18,21 @@
   {% url 'servicios:modificarTipoServicio' object.pk %}
 {% endblock %}
 
-{% block cmodal %}
+{% block cform %}
+<form action="{% url 'servicios:modificarTipoServicio' object.pk %}" method="POST">
+  {% csrf_token %}
   <div id="tipo-servicio-form-wrapper">
     {% crispy form form.helper %}
   </div>
   <div data-formset="productos_cantidad" id="productos">
     {% crispy tipoServicio_producto_formset tipoServicio_producto_formset_helper %}
   </div>
-{% endblock %}
 
-<!-- Boton del modal -->
-{% block btnmodal %}
-  Guardar
+  <div class="modal-footer">
+    <button type="submit" class="btn btn-primary">Guardar</button>
+    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
+  </div>
+</form>
 {% endblock %}
 
 
@@ -64,3 +67,11 @@
   </script>
   
 {% endblock %}
+
+
+
+
+
+
+
+
