--- a/servicios/templates/servicios/servicio_list.html
+++ b/servicios/templates/servicios/servicio_list.html
@@ -8,12 +8,10 @@
 Buscar Servicio
 {% endblock %}
 
-
     {% block tlista %} Listado de Servicios {% endblock %}
 
     {% block thextras %}
         <th colspan="">Opciones</th>
-        <th colspan="">Informacion</th>
     {% endblock%}
     
     {% block tcuerpo %}
@@ -30,14 +28,26 @@ Buscar Servicio
 
         <td>
         {% if s.estado.tipo == s.estado.Tipo.PRESUPUESTADO %}
-            <button type="button" class="btn btn-primary" id="contratar-btn" data-servicio-id="{{ s.id }}">Contratar</button>
-        {% endif %}
-        </td>
-
+            <a href="#" 
+            onclick="abrir_modal('{% url "servicios:contratarServicio" pk=s.pk %}')" 
+            class="bi bi-file-earmark-check text-success fs-5" 
+            data-bs-toggle="tooltip" 
+            data-bs-placement="top" 
+            title="Contratar Servicio">
+            </a>
         
-        <td>
-            <a href="#" onclick="abrir_modal('{% url "servicios:modificarServicio" pk=s.pk %}')" class="bi bi-pencil-square text-primary"> </a>
+        {% endif %}
+
+            <a href="#" 
+               onclick="abrir_modal('{% url "servicios:modificarServicio" pk=s.pk %}')" 
+               class="bi bi-pencil-square text-primary fs-5 " 
+               data-bs-toggle="tooltip" 
+               data-bs-placement="top" 
+               title="Modificar Servicio">
+            </a>
         </td>
+        
+
 
     </tr>
 
@@ -64,4 +74,5 @@ function abrir_modal(url){
 }
 </script>
 {% endblock %}
+
 
