--- a/core/templates/baselist.html
+++ b/core/templates/baselist.html
@@ -68,7 +68,8 @@
                     </div>
                     {% endblock %}
 
-
+                    {% block custom_actions %}
+                    {% endblock %}
 
                     <!--Paginacion-->
                     <div class="d-flex justify-content-between align-items-center pt-2">
