--- a/turnos/templates/horario/horario_modal.html
+++ b/turnos/templates/horario/horario_modal.html
@@ -2,13 +2,20 @@
 {% load crispy_forms_tags %}
 
 <!--Titulo del modal-->
-{% block tmodal %} Edicion Turno: {% endblock %}
+{% block tmodal %} Edicion Turno {% endblock %}
 
 <!--Objeto del titulo del modal-->
-{% block tobjectmodal %} {{object}} {% endblock %}
+{% block tobjectmodal %}  {% endblock %}
 
 <!--Url del modal-->
-{% block url %} {% url 'turnos:modificarHorario' object.pk %} {% endblock %}
+{% block url %} {% url 'turnos:modificarHorarioParaServicio' object.pk %} {% endblock %}
+
+{% block cmodal %}
+    {% crispy form form.helper %}
+    <div data-formset="periodo" id="periodos" class="table-responsive">
+      {% crispy periodo_formset periodo_formset_helper %}
+    </div>
+{% endblock %}
 
 <!--Boton del modal-->
 {% block btnmodal %} Guardar {% endblock %} 
