creacion, listado y modificacion de servicios de un cliente casi terminado

--- a/core/templates/clientes/cliente_modal.html
+++ b/core/templates/clientes/cliente_modal.html
@@ -1,4 +1,4 @@
-{% extends "basemodal.html" %}
+{% extends "../basemodal.html" %}
 
 <!--Titulo del modal-->
 {% block tmodal %} Edicion Cliente: {% endblock %}
