--- a/servicios/templates/servicios/servicio_list.html
+++ b/servicios/templates/servicios/servicio_list.html
@@ -11,6 +11,14 @@ Buscar Servicio
 
     {% block tlista %} Listado de Servicios {% endblock %}
 
+    {% block tExtras %} 
+    
+        {% if cliente %}
+            <a href="{% url 'servicios:crearServicioParaCliente' cliente.pk %}" class="bi bi-plus-circle-fill text-success fs-5"></a>
+        {% else %}
+            <a href="{% url 'servicios:crearServicio' %}" class="bi bi-plus-circle-fill text-success fs-5"></a>
+        {% endif %}
+    {% endblock %}
     {% block thextras %}
         <th colspan="">Opciones</th>
         <th colspan="">Informacion</th>
@@ -34,9 +42,12 @@ Buscar Servicio
         {% endif %}
         </td>
 
-        
         <td>
+        {% if cliente %}
+            <a href="#" onclick="abrir_modal('{% url "servicios:modificarServicioParaCliente" cliente_pk=s.inmueble.cliente.pk pk=s.pk %}')" class="bi bi-pencil-square text-primary"> </a>
+        {% else %}
             <a href="#" onclick="abrir_modal('{% url "servicios:modificarServicio" pk=s.pk %}')" class="bi bi-pencil-square text-primary"> </a>
+        {% endif %}
         </td>
 
     </tr>
