commit para push

--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -52,6 +52,7 @@
             </a>
           </li>
 
+          {% if perms.core %}
           <!-- Menu empleados -->
           <li class="sidebar-item">
 
@@ -101,6 +102,7 @@
             </ul>            
 
           </li>   
+          {% endif %}
 
           <!-- Menu clientes -->
           <li class="sidebar-item">
