--- a/servicios/templates/servicios/servicio_list.html
+++ b/servicios/templates/servicios/servicio_list.html
@@ -46,13 +46,15 @@ Buscar Servicio
 
     
         {% elif s.estado_actual.tipo == "contratado" %}
-            <a href="#" 
-            onclick="abrir_modal('{% url "servicios:facturarServicio" pk=s.pk %}')" 
-            class="bi bi-cash-stack text-success fs-5" 
+
+            <a 
+            href="{% url 'facturas:listarFacturasDeServicio' pk=s.pk %}" 
+            class="bi bi-cash-stack  text-info fs-5" 
             data-bs-toggle="tooltip" 
             data-bs-placement="top" 
-            title="Facturar Servicio">
+            title="Facturas">
             </a>
+
             <a href="#" 
             onclick="abrir_modal('{% url "servicios:cancelarServicio" pk=s.pk %}')" 
             class="bi bi-x-octagon text-danger fs-5" 
@@ -70,13 +72,7 @@ Buscar Servicio
                title="Modificar Servicio">
             </a-->
             
-        <td>
-        {% if cliente %}
-            <a href="#" onclick="abrir_modal('{% url "servicios:modificarServicioParaCliente" cliente_pk=s.inmueble.cliente.pk pk=s.pk %}')" class="bi bi-pencil-square text-primary"> </a>
-        {% else %}
-            <a href="#" onclick="abrir_modal('{% url "servicios:modificarServicio" pk=s.pk %}')" class="bi bi-pencil-square text-primary"> </a>
-        {% endif %}
-        </td>
+
         
 
 
@@ -90,7 +86,6 @@ Buscar Servicio
 
     
 {% endblock %}
-
 
 
 {% block extrajs %}
