WIP vista de periodos desde usuarios

--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -174,25 +174,30 @@
           </li>
           {% endif %}
 
-      <!-- Menu turnos -->
-      <li class="sidebar-item">
-
-        <a href="#" class="sidebar-link collapsed" data-bs-target="#gestionHorarios" data-bs-toggle="collapse"
-          aria-expanded="false">
-          <i class="bi bi-alarm"></i> Gestion Turnos
-        </a>
-
-        <!--Turnos-->
-        <ul id="gestionHorarios" class="sidebar-dropdown list-unstyled collapse" data-bs-parents="#sidebar">
+          <!-- Menu turnos -->
           <li class="sidebar-item">
-            <a href="{% url 'turnos:crearHorario' %}" class="sidebar-link mx-4"> <i class="bi bi-plus"></i> Crear</a>
+
+            <a href="#" class="sidebar-link collapsed" data-bs-target="#gestionPeriodos" data-bs-toggle="collapse"
+              aria-expanded="false">
+              <i class="bi bi-alarm"></i> Gestion Turnos
+            </a>
+
+            <!--Turnos-->
+            <ul id="gestionPeriodos" class="sidebar-dropdown list-unstyled collapse" data-bs-parents="#sidebar">
+              
+              
+              {% if perms.core %}
+              <li class="sidebar-item">
+                <a href="{% url 'turnos:listarPeriodos' %}" class="sidebar-link mx-4"> <i class="bi bi-list-ul"></i> Buscar</a>
+              </li>
+              {% else %}
+              <li class="sidebar-item">
+                <a href="{% url 'turnos:listarPeriodosDeEmpleado' user.empleado.pk %}" class="sidebar-link mx-4"> <i class="bi bi-list-ul"></i> Buscar</a>
+              </li>
+              {% endif %}
+            </ul>
           </li>
-          
-          <li class="sidebar-item">
-            <a href="{% url 'turnos:listarHorarios' %}" class="sidebar-link mx-4"> <i class="bi bi-list-ul"></i> Buscar</a>
-          </li>
-        </ul>
-      </li>
+
         {% if perms.core %}
           <!-- Menu servicios -->
           <li class="sidebar-item">
