--- a/servicios/templates/servicios/servicio_confirm_delete.html
+++ b/servicios/templates/servicios/servicio_confirm_delete.html
@@ -16,6 +16,7 @@
     {{object}}
 {% endblock %}
 
-{% block btn %}
-    Cancelar
+{% block footer %}
+    <button type="submit" class="btn btn-success">Cancelar contrato</button>
+    <button type="button" class="btn btn-danger" onclick="cerrar_modal()">Cerrar</button>
 {% endblock %}
