--- a/servicios/templates/servicios/servicio_confirm_seña.html
+++ b/servicios/templates/servicios/servicio_confirm_seña.html
@@ -9,6 +9,8 @@
 {% endblock %}
 
 {% block p %}
+    La seña del servicio requerida es de: {{seña}}
+
     ¿El cliente realizo la seña de 
 {% endblock %}
 
@@ -17,6 +19,6 @@
 {% endblock %}
 
 {% block footer %}
-    <button type="submit" class="btn btn-danger">Señar</button>
-    <button type="button" class="btn btn-success" onclick="cerrar_modal()">Cancelar</button>
+    <button type="submit" class="btn btn-success">Señar</button>
+    <button type="button" class="btn btn-danger" onclick="cerrar_modal()">Cancelar</button>
 {% endblock %}
