--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -322,7 +322,7 @@
 
   <script src="{% static 'js/aside.js' %}"></script>
   <script type="text/javascript" src="{% static 'js/modal_form_validation.js' %}"></script>
-
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.10.1/html2pdf.bundle.min.js" integrity="sha512-GsLlZN/3F2ErC5ifS5QtgpiJtWd43JWSuIgh7mbzZ8zBps+dvLusV+eNQATqgA/HdeKFVgA5v3S/cIrLF7QnIg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
   {% block extrajs %}
   {% endblock %}
