cambio en urls de empleado

--- a/core/templates/home.html
+++ b/core/templates/home.html
@@ -44,7 +44,7 @@ Senda
             <p class="text-danger">
                 2
             </p>
-            <button class="btn btn-primary">Ver</button>
+            <a href="{% url 'listarEmpleado' %}" class="btn btn-primary">Ver</a>
           </div>
         </div>
       </div>
