--- a/core/templates/home.html
+++ b/core/templates/home.html
@@ -81,7 +81,7 @@ Senda
         var data = JSON.parse('{{ data|escapejs }}');
 
         var myChart = new Chart(ctx, {
-            type: "bar",  // Puedes cambiarlo a "line", "pie", etc.
+            type: "pie",  // Puedes cambiarlo a "line", "pie", etc.
             data: {
                 //labels: ["Enero", "Febrero", "Marzo", "Abril", "Mayo"],
                 labels: labels,
